--- a/frontend/src/styles/Variables.css
+++ b/frontend/src/styles/Variables.css
@@ -10,11 +10,13 @@
 
   /* 중립 색상 (Neutral Colors) */        
   --color-white: #ffffff;           
-  --color-grey-light: #f8f8f8;      
+  --color-grey-light: #f8f8f8;     
   --color-red: #ED0000;             
   --color-red-light: #FFECEC;
   --color-blue: #0087FF;
   --color-blue-light: #F1F8FF;
+
+
   
   --bg-base: var(--color-white);         /* 전체 페이지 기본 배경 */
   --bg-surface: var(--color-grey-light); /* 카드, 섹션, 박스 등 내부 서브 배경 */
@@ -51,6 +53,16 @@
   --error-ipnut: var(--color-red);
   --error-font: var(--color-red);
   --error-bg: var(--color-red-light);
+  --error-line: var(--color-red);
+
+  /* 성공 색상 */
+  --success-line: var(--color-blue);
+  --success-bg: var(--color-blue-light);
+
+  /* 가이드 색상 */
+  --guide-ling: #cdcdcd;
+  --guide-bg: #f5f5f5;
+  --guide-font: var(--text-placeholder);
 
   /* 버튼 컬러 */
   --button-ghost-hover: #F1F1F1;
@@ -59,7 +71,7 @@
 
 }
 
-/* 반흥형 별 크기 사이즈 */
+/* 반응형 별 크기 사이즈 */
 @media(max-width: 768px){
     html{
         font-size: 14px;   
