--- a/frontend/src/components/Button/Button.module.css
+++ b/frontend/src/components/Button/Button.module.css
@@ -52,3 +52,7 @@
     background-color: var(--button-ghost-hover);
     border: 1px solid var(--button-ghost-hover);
 }
+
+.shadow{
+    box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 10%);
+}
