feat: login page 정리 및 언어설정 리팩토링

--- a/frontend/src/components/SocialLogin/SocialLoginButton.module.css
+++ b/frontend/src/components/SocialLogin/SocialLoginButton.module.css
@@ -112,3 +112,12 @@ hr{
     color: var(--text-sub);
     
 }
+
+/* 그림자 */
+.shadow{
+    box-shadow: var(--button-shadow);
+    transition: 0.3s;
+}
+.shadow:hover{
+    box-shadow: var(--button-hover-shadow);
+}
