--- a/frontend/src/components/Button/Button.module.css
+++ b/frontend/src/components/Button/Button.module.css
@@ -54,5 +54,9 @@
 }
 
 .shadow{
-    box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 10%);
+    box-shadow: var(--button-shadow);
+    transition: 0.3s;
+}
+.shadow:hover{
+    box-shadow: var(--button-hover-shadow);
 }
