--- a/frontend/src/components/Input/PasswordField/PasswordField.module.css
+++ b/frontend/src/components/Input/PasswordField/PasswordField.module.css
@@ -7,7 +7,7 @@
 
 .toggleButton {
     position: absolute;
-    right: 10px;
+    right: 0.7692rem;
     background: none;
     border: none;
     cursor: pointer;
@@ -24,5 +24,5 @@
 } 
 
 .passwordButton{
-    margin: -13px 0px 0px -30px;
+    margin: -1rem 0 0 -2.3rem;
 }
