--- a/frontend/src/components/Selector/LanguageSelector/LanguageSelector.module.css
+++ b/frontend/src/components/Selector/LanguageSelector/LanguageSelector.module.css
@@ -77,6 +77,9 @@
 
     max-height: 14rem;
     overflow: auto;
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
 }
 .menu:focus { outline: none; }
 
