--- a/frontend/src/styles/Variables.css
+++ b/frontend/src/styles/Variables.css
@@ -40,6 +40,7 @@
 
     /* 기본 아이콘 컬러 */
     --icon-color: #999999;
+    --icon-color-wh: #ffffff;
 
     /* 인풋 색상 */
     --input-border: #EAEAEC;    /* 인풋 보더 */
