--- a/frontend/src/components/Notification/Notification.module.css
+++ b/frontend/src/components/Notification/Notification.module.css
@@ -1,1 +1,14 @@
 @charset "uft-8";
+
+/* 타이틀 박스 */
+.titleContainer{
+    width: 100%;
+    height: 4rem;
+    display: flex;
+    align-items: end;
+}
+
+/* 아이템 박스 */
+.ItemContainer{
+
+}
