--- a/frontend/src/pages/User/Dashboard.module.css
+++ b/frontend/src/pages/User/Dashboard.module.css
@@ -1,14 +1,21 @@
 @charset "utf-8";
 
 .wrap{
-    display: flex;
-    width: 100vw;
-    height: 100vh;
+    float: left;
+    width: 100%;
+    height: 100%;
     background-color: var(--bg-gray);
 }
 .wrap > .container{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
+}
+
+/* 메인 */
+main{
+    width: 100%;
+    height: calc(100% - 7.6154rem);
+    padding: 1rem;
 }
