--- a/frontend/src/components/Notification/Notification.module.css
+++ b/frontend/src/components/Notification/Notification.module.css
@@ -2,14 +2,17 @@
 .container{
     width: 100%;
     height: 100vh;
-    padding: 0rem var(--base-padding);
+    display: flex;
+    flex-direction: column;
 }
 
 .fixedBox{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: auto;
+    /* height: 14rem; */
+    flex-shrink: 0;
+    padding: 0 var(--base-padding) var(--gab-padding) var(--base-padding) ;
 }
 
 /* 타이틀 박스 --------------------------*/
@@ -51,10 +54,10 @@
 
 /* 셀렉트 및 정렬 박스 --------------------------*/
 .selectContainer{
-    border: 1px solid var(--color-border);
+    /* border: 1px solid var(--color-border);
     border-radius: var(--border-radius);
-    padding: var(--base-padding);
-    margin: var(--base-padding) 0rem; 
+    padding: var(--base-padding); */
+    margin-top: var(--base-padding);
 }
 .selectContainer > ul{
     width: 100%;
@@ -84,6 +87,19 @@
 }
 
 /* 아이템 박스 --------------------------*/
+/* 스크롤 안 보이게 해둠 */
 .ItemContainer{
     width: 100%;
+    /* height: calc(100vh - 14rem); */
+    flex: 1;
+    min-height: 0;
+    padding: 0 var(--base-padding) var(--base-padding) var(--base-padding);
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    gap: var(--gab-padding);
+    -ms-overflow-style: none;
+}
+.ItemContainer::-webkit-scrollbar{
+    display: none;
 }
