--- a/frontend/src/styles/Variables.css
+++ b/frontend/src/styles/Variables.css
@@ -10,11 +10,13 @@
     --color-primary-gradient: linear-gradient(90deg, #B3207E, #CC53A3, #D986BB); */
 
     /* 전체 테마 컬러 ----------------------- */
-    --color-primary: #3B53FF;          /* 선명한 블루 */
+    --color-primary: #3B53FF;   
+    --color-primary-20: #f3f4ffdb;     /* 선명한 블루 */
     --color-primary-dark: #2A3ABF;     /* 진한 딥 블루 */
     --color-primary-light: #9BB8FF;    /* 연한 라이트 블루 */
     --color-primary-gradient: linear-gradient(90deg, #2A3ABF, #3B53FF, #758AFF);
-
+    --color-white-gradient: linear-gradient(160deg, var(--color-primary-20),#fbfbff);
+    /* linear-gradient(163deg, #eaecffdb, #fbfbff); */
     /* 중립 색상 (Neutral Colors) -----------------------*/        
     --color-white: #ffffff;           
     --color-grey-light: #f8f8f8;     
@@ -79,7 +81,7 @@
 
     /* 가이드 색상 */
     --guide-bg: #f5f5f5;
-    --guide-bg-light: #f5f5f583;
+    --guide-bg-light: #33141483;
     --guide-font: #5c5c5c;
     --guide-ling: #a5a5a5d1;
 
@@ -189,4 +191,12 @@ h3{
     padding: 0.4rem 1.2rem;
     border-radius: 999px;
     font-size: 1rem;
+}
+
+/* input 체크박스 */
+.checkStyle{
+    width: 1.2rem;
+    height: 1.2rem;
+    border-radius: 50%;
+    border-color: 1px solid var(--color-border);
 }
