--- a/frontend/src/styles/Variables.css
+++ b/frontend/src/styles/Variables.css
@@ -93,6 +93,9 @@
     --tooltip-font: #ffffff;
     --tooltip-shadow: 0 6px 24px rgba(0, 0, 0, 0.079);
 
+    /* 모달 색상 */
+    --modal-bg: rgba(0, 0, 0, 0.30);
+
 
     /* 규격 -------------------------------------------------------------------------*/
     
@@ -104,7 +107,12 @@
     /* 애니메이션 */
     --animation-button: 0.3s ease;
 
-    
+
+    /* 순서 체크 -------------------------------------------------------------------------*/
+    --z-index-modal: 90;
+    --z-index-tooltip: 80;
+    --z-index-sidebar: 10;
+    --z-index-sidebar-icon: 9;
 }
 
 /* 반응형 별 크기 사이즈 */
