--- a/frontend/src/styles/Variables.css
+++ b/frontend/src/styles/Variables.css
@@ -158,7 +158,7 @@ textarea{
     color: var(--text-body);
 }
 
-/* font */
+/* font ------------------ */
 h1{
     font-weight: 700;
     font-size: 1.4rem;
@@ -175,7 +175,22 @@ h3{
     font-weight: 600;
 }
 
-/* 폰트 굷기 */
+/* focus ------------------ */
+.borderFocus:focus{
+    outline: 0.1429rem solid var(--color-primary) !important;
+    outline-offset: 0.1429rem !important;
+}
+
+/* 메뉴 포커스 */
+.menuFocus:focus{
+    background-color: var(--color-primary) !important; /* slate-700-ish */
+    color: #ffffff !important;
+}
+
+
+
+
+/* 폰트 굷기 ------------------ */
 .fw600{
     font-weight: 600;
 }
@@ -183,7 +198,7 @@ h3{
     font-weight: 700;
 }
 
-/* 이미지 버튼 */
+/* 이미지 버튼 ------------------ */
 .imgBg{
     background-size: cover; 
     background-position: center;
@@ -191,7 +206,7 @@ h3{
     border: none; 
 }
 
-/* 규격 */
+/* 규격 ------------------ */
 .textTag{
     display: flex;
     justify-content: center;
@@ -201,7 +216,7 @@ h3{
     font-size: 1rem;
 }
 
-/* input 체크박스 */
+/* input 체크박스 ------------------ */
 .checkStyle{
     width: 1.2rem;
     height: 1.2rem;
