--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -41,7 +41,6 @@ header > ul{
     width: 3.3rem;
     height: 3.3rem;
     border-radius: 50%;
-    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -49,6 +48,7 @@ header > ul{
 .profileImg{
     width: 100%;
     height: 100%;
+    border-radius: 50%;
     background-image: url(../../../public/assets/profile/hong.jpg);
 }
 
