--- a/frontend/src/components/Button/Button.module.css
+++ b/frontend/src/components/Button/Button.module.css
@@ -31,6 +31,7 @@
 .large{
     font-size: 1.0769rem;
     font-weight: 500;
+    padding: 0 1rem;
 }
 
 /* 버튼 색상 스타일 보더 + 배경색 + 호버 */
@@ -46,6 +47,7 @@
 .ghost{
     background-color: var(--color-white);
     border: 1px solid var(--color-border);
+    color: var(--text-body);
 }
 .ghost:hover{
     background-color: var(--button-ghost-hover);
