--- a/frontend/src/components/Footer/Footer.module.css
+++ b/frontend/src/components/Footer/Footer.module.css
@@ -25,6 +25,7 @@
     color: var(--text-color);
     transition: 0.3s ease;
     padding: 0rem 0.5rem;
+    border-radius: var(--border-radius);
 }
 .listBox > li > a:hover{
     color: var(--color-primary);
